Fix compiler warnings with generic parameters and diamond operator
- Add generic type parameters to all collection classes and Swing components
- Replace explicit type parameters with diamond operator (<>) for cleaner code
- Fix URL handling in Config class to use URI.toURL() pattern
- Add exception handling for URISyntaxException
- Update toArray() calls with type parameters

These changes eliminate all unchecked conversion warnings while maintaining
backward compatibility with Java 8.